--- a/src/components/List.scss
+++ b/src/components/List.scss
@@ -2,6 +2,7 @@
 
 .list {
   list-style: none;
+  padding: 0 0.2em;
 
   .list-item {
     background: $black-light;
