--- a/src/components/Search.scss
+++ b/src/components/Search.scss
@@ -1,13 +1,13 @@
 @import "../styles/colors";
 
 .search {
-  max-width: 35rem;
+  max-width: 30rem;
   height: 3rem;
   margin: 0 auto;
 
   &__container {
     background-color: $white;
-    max-width: 35rem;
+    max-width: 30rem;
     margin: 0 auto;
     border: 2px solid transparent;
     border-radius: 2rem;
