--- a/src/pages/Songs.scss
+++ b/src/pages/Songs.scss
@@ -4,5 +4,9 @@
   max-width: 60rem;
   margin: 0 auto;
   background-color: $black;
+
+  .not-found {
+    text-align: center;
+  }
 }
 
